--- a/contact.html
+++ b/contact.html
@@ -16,7 +16,7 @@
         <nav class="navbar navbar-expand-lg navbar-dark fixed-top bg-dark bg-primary">
             <div class="container">
                 <a class="navbar-brand" href="index.html">
-                    <img src="SeekPng.com_coffee-steam-png_944036.png" width="30" height="30" class="d-inline-block align-top"
+                    <img src="images/SeekPng.com_coffee-steam-png_944036.png" width="30" height="30" class="d-inline-block align-top"
                         alt="Kaffeparty Logo">
                     Kaffeparty
                 </a>
