--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <nav class="navbar navbar-expand-lg navbar-dark fixed-top bg-dark bg-primary">
             <div class="container">
                 <a class="navbar-brand" href="index.html">
-                    <img src="SeekPng.com_coffee-steam-png_944036.png" width="30" height="30" class="d-inline-block align-top"
+                    <img src="images/SeekPng.com_coffee-steam-png_944036.png" width="30" height="30" class="d-inline-block align-top"
                         alt="Kaffeparty Logo">
                     Kaffeparty
                 </a>
@@ -52,7 +52,7 @@
 
             <div class="row">
                 <div class="col-4">
-                    <img src="Röe_gård_café_2.jpg" class="img-fluid rounded-1">
+                    <img src="images/Röe_gård_café_2.jpg" class="img-fluid rounded-1">
                 </div>
                 
                 <div class="col-8">
@@ -61,13 +61,13 @@
                     </p>
                 </div>
                 
-                <div class="col-6 col-lg-4">
+                <div class="col-8">
                     <h3 class="my-3">Vad gör vi?</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. 
                     </p>
                 </div>
 
-                <div class="col-6 col-lg-8">
+                <div class="col-4">
                     <img src="images/DSC0316-1024x683.jpg" class="img-fluid rounded-1">
                 </div>
 
