--- a/products.html
+++ b/products.html
@@ -134,5 +134,10 @@
 
     </main>
 
+    <footer>
+        <div class="text-center text-white p-3" style="background-color: black;">
+            
+    © 2022 Copyright: Emil Keski-Seppälä
+    </footer>
 </body>
 </html>
