--- a/index.html
+++ b/index.html
@@ -91,5 +91,12 @@
             </div>
         </div>
     </main>
+
+    <footer>
+        <div class="text-center text-white p-3" style="background-color: black;">
+            
+    © 2022 Copyright: Emil Keski-Seppälä
+    </footer>
+
 </body>
 </html>
