--- a/contact.html
+++ b/contact.html
@@ -53,18 +53,18 @@
             </h1>
 
             <div class="container">
-                <div class="row">
-                    <div class="col-md-6 text-center rounded">
+                <div class="row gx-5">
+                    <div class="col text-center rounded">
                         <img class="img-fluid rounded-circle" src="ceo.jpg" style="padding: 10%">
                         <h2>CEO John Doe</h2>
                         <p>Telefon: 070111222333</p>
-                        <p>Mail: JohnCEO@kaffeparty.com</p>
+                        <a href = "mailto: JohnCEO@kaffeparty.com">Mail till: JohnCEO@kaffeparty.com</a>
                     </div>
-                    <div class="col-md-6 text-center rounded">
+                    <div class="col text-center rounded">
                         <img class="img-fluid rounded-circle" src="ceo.jpg" style="padding: 10%">
                         <h2>HR-ansvarig John Doe</h2>
                         <p>Telefon: 070123456789</p>
-                        <p>Mail: JohnCEO@kaffeparty.com</p>
+                        <a href = "mailto: JohnHR@kaffeparty.com">Mail till: JohnHR@kaffeparty.com</a>
                     </div>
                 </div>
             </div>
